# fastapi_template

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
project/: app.py
project/config/: api_json.py  db_config.py  log_config.py  logging.prod.ini  logging.test.ini  sys_config.py
project/dependencies/: auth_depend.py  download_depend.py  req_depend.py
project/endpoints/: endpoints.py
project/interceptor/: before_req.py  global_exception_handler.py
project/models/: auth_models.py  com_validator.py  proj_base_model.py  user_models.py
project/modules/auth/: user_auth.py
project/modules/info/: info.py
project/modules/user/: user.py
project/utils/: api_limiter.py  comm_ret.py  encrypt_data.py  encrypt_data_test.py  handle_regexp.py  handle_req_param.py  jwt_auth.py  operate_elasticsearch.py  operate_minio.py  operate_mongodb.py  operate_numeric.py  operate_redis.py  opt_redis_sentinel.py  resp_code.py  sys_access_log.py
resources/static/css/: index.css
resources/templates/: index.html
