[project]
name = "fastapi-template"
version = "0.1.0"
description = "fastapi template"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "elasticsearch==7.12.0",
    "fastapi==0.136.3",
    "openpyxl==3.1.5",
    "pymongo==4.17.0",
    "python-multipart==0.0.32",
    "redis==5.3.1",
    "slowapi==0.1.9",
    "uvicorn==0.49.0",
]
[tool.ruff.lint.per-file-ignores]
"project/app.py" = ["F401"]
